# ur10e_with_ewellix_lift

./: .gitignore  README.md
ewellix_description/config/: tlt_x27.yaml
ewellix_description/launch/: description.launch.py
ewellix_description/urdf/: ewellix_lift.urdf.xacro
ewellix_examples/launch/: simulation.launch.py
moveit_config/: .setup_assistant  package.xml
moveit_config/config/: chomp_planner.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  lerp_planner.yaml  moveit_controllers.yaml  ur.ros2_control.xacro  ur.srdf  ur.urdf.xacro
simulation_10x/: CMakeLists.txt  README.md  package.xml
simulation_10x/config/: ur_controllers.yaml
simulation_10x/launch/: moveit_ur10e.launch.py  simulation.launch.py  spawn_ur10e.launch.py  view_ur10e.launch.py
simulation_10x/scripts/: cartesian_shape_drawer.py  move_robot_positions.py  velocity_plotter.py
simulation_10x/urdf/: ewellix_lift.urdf.xacro  ewellix_macro.xacro  robotiq_2f_85_macro.xacro  ur.urdf.xacro  ur_macro.xacro
ur10e_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10e_gripper_moveit_config/config/: ur.srdf
ur10e_gripper_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
