<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_10x</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="anirudh.panchangamranganath@study.thws.de">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>ewellix_interfaces</depend>
  <depend>ewellix_description</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ur_controllers</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>urdf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="/home/rosuser/Code/ws/install/robotiq_description/share"/>
    <gazebo_ros gazebo_model_path="/home/rosuser/Code/ws/install/ewellix_description/share"/>
  </export>
</package>
